# PyTemplate

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
